--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Basic Settings
-title: Erika C. Matesz Bueno
+title: Let's talk about AI
 email: mateszbueno@gmail.com
 description: Uma descrição curta do seu site
 
