--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Basic Settings
 title: Let's talk about AI
-email: mateszbueno@gmail.com
-description: Uma descrição curta do seu site
+email: ecmateszbueno@gmail.com
+description: not-so-random content about AI
 
 # Build Settings
 theme: minima
